# emr-private-endpoints

./: pyproject.toml
app/: main.py
app/templates/: index.html
