[tool.poetry]
name = "emr-private-endpoints"
version = "0.1.0"
description = "A web gui to access EMR endpoints on a private network"
authors = ["Michele Zuccala <michele@zuccala.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
boto3 = "^1.14.51"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
